Feat: membuat layout travel landing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,6 +66,10 @@
   background-color: rgba(115, 173, 255, 0.2);
 }
 
+.background-apartement {
+  background-color: rgba(104, 27, 238, 0.2);
+}
+
 .background-destination {
   background-color: rgba(243, 180, 60, 0.2);
 }
