--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,18 @@
 .background-blend {
   background:
     linear-gradient(to bottom, rgba(10, 57, 122, 0.75), rgba(1, 23, 53, 0.681)),
-    url("../../public/assets/images/neededs//background-hero-kiluan.jpg")
+    url("../../public/assets/images/neededs/background-hero-kiluan.jpg")
+      no-repeat center;
+  background-size: cover;
+  background-blend-mode: overlay;
+  /* background-position: center; */
+  background-position-x: left;
+}
+
+.background-blend-travel {
+  background:
+    linear-gradient(to bottom, rgba(10, 57, 122, 0.75), rgba(1, 23, 53, 0.681)),
+    url("../../public/assets/images/neededs/banner-travel-ticketing-conditions.png")
       no-repeat center;
   background-size: cover;
   background-blend-mode: overlay;
