Feat: membuat layout paket, membuat layout rental, membuat layout detail article dan slider, serta membuat layout slide di detail hotel, plus responsive except detail hotel

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,6 +100,10 @@
   background-blend-mode: overlay;
 }
 
+.background-rental-armada {
+  background-color: rgb(237, 237, 237);
+}
+
 .swiper-button-next,
 .swiper-button-prev {
   color: #0000ff !important;
