* rental -> form-rent (responsive) * memperbaiki detail travel bug tampilan

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -392,3 +392,12 @@
 .mobile-destination-travel-car-lists-wrap.active .mobile-location-overlay {
   bottom: 50px; /* Naikkan overlay saat gambar aktif */
 }
+
+/* Hilangkan scrollbar untuk semua elemen dengan class .scrollbar-hide */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
