Feat: Rental di website berhasil(kurang validasi), integrasi api update foto profile, memperbarui api update profile penambahan kota, responsive profile di akun saya, ubah password, hisory travel dan rental

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -401,3 +401,24 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+.prose {
+  /* text-align: center; */
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center;
+  align-items: center;
+  align-self: center; */
+}
+
+.prose ol {
+  display: flex;
+  flex-direction: column;
+  list-style-type: decimal;
+  margin-left: 2em;
+}
+
+.prose ul {
+  list-style-type: disc;
+  margin-left: 3em;
+}
