Feat: integrasi mobil rental detail dan integrasi syarat ketentuan dan membuat layout popup

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -422,3 +422,13 @@
   list-style-type: disc;
   margin-left: 3em;
 }
+
+.verticalScroll {
+  width: 100%;
+  overflow-y: scroll;
+  scrollbar-color: transparent transparent;
+}
+
+.verticalScroll::-webkit-scrollbar {
+  display: none;
+}
